{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 25,
  "lineage": "2daf4925-9b48-c74b-1c27-3f29adf4fb6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030f80fd70a38be5a",
            "association_id": "eipassoc-0616d9166674db5f4",
            "domain": "vpc",
            "id": "eipalloc-030f80fd70a38be5a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-04f3413c8ad22b659",
            "private_dns": "ip-192-168-8-177.eu-central-1.compute.internal",
            "private_ip": "192.168.8.177",
            "public_dns": "ec2-18-157-144-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.144.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0396c35e1c4894c38",
            "association_id": "eipassoc-0304ef09fc547050c",
            "domain": "vpc",
            "id": "eipalloc-0396c35e1c4894c38",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07fcd9b233a05b93a",
            "private_dns": "ip-192-168-118-205.eu-central-1.compute.internal",
            "private_ip": "192.168.118.205",
            "public_dns": "ec2-18-159-204-64.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.204.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:internet-gateway/igw-0cdecb503ccc007e2",
            "id": "igw-0cdecb503ccc007e2",
            "owner_id": "448866767801",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030f80fd70a38be5a",
            "connectivity_type": "public",
            "id": "nat-08da6320250422857",
            "network_interface_id": "eni-04f3413c8ad22b659",
            "private_ip": "192.168.8.177",
            "public_ip": "18.157.144.124",
            "subnet_id": "subnet-0c40f4a946c9fff35",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0396c35e1c4894c38",
            "connectivity_type": "public",
            "id": "nat-06e3517c36f3f686d",
            "network_interface_id": "eni-07fcd9b233a05b93a",
            "private_ip": "192.168.118.205",
            "public_ip": "18.159.204.64",
            "subnet_id": "subnet-0f8eae4fc19316177",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:route-table/rtb-06e56b36669bf6af2",
            "id": "rtb-06e56b36669bf6af2",
            "owner_id": "448866767801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08da6320250422857",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:route-table/rtb-050b58eb93c7f7ffe",
            "id": "rtb-050b58eb93c7f7ffe",
            "owner_id": "448866767801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06e3517c36f3f686d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:route-table/rtb-07a1d68b3a0f0780c",
            "id": "rtb-07a1d68b3a0f0780c",
            "owner_id": "448866767801",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdecb503ccc007e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e9c40931e374c18",
            "route_table_id": "rtb-06e56b36669bf6af2",
            "subnet_id": "subnet-0bd22327c3edfb3af"
          },
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5fbf619ec76ad8",
            "route_table_id": "rtb-050b58eb93c7f7ffe",
            "subnet_id": "subnet-0088907aa5f9e5aaa"
          },
          "dependencies": [
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046fbf1e7f033bd4a",
            "route_table_id": "rtb-07a1d68b3a0f0780c",
            "subnet_id": "subnet-0c40f4a946c9fff35"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e8e49b53ecf9cc",
            "route_table_id": "rtb-07a1d68b3a0f0780c",
            "subnet_id": "subnet-0f8eae4fc19316177"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:subnet/subnet-0bd22327c3edfb3af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd22327c3edfb3af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448866767801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu/central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-eu/central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:subnet/subnet-0088907aa5f9e5aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0088907aa5f9e5aaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448866767801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu/central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-eu/central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:subnet/subnet-0c40f4a946c9fff35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c40f4a946c9fff35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448866767801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu/central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu/central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:subnet/subnet-0f8eae4fc19316177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8eae4fc19316177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "448866767801",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu/central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu/central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03f111f084f5fb7f6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:448866767801:vpc/vpc-03f111f084f5fb7f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e1d1c81ab049a402",
            "default_route_table_id": "rtb-05042a6180f5d5063",
            "default_security_group_id": "sg-07db0708aa8d50b29",
            "dhcp_options_id": "dopt-0e33f83287d438d60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03f111f084f5fb7f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05042a6180f5d5063",
            "owner_id": "448866767801",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}